remove unused v2 api
